--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: Download Vault
   get_url:
-    url: "https://releases.hashicorp.com/vault/1.15.0/vault_1.15.0_linux_amd64.zip"
+    url: "{{ vault_download_url  }}"
     dest: "/tmp/vault.zip"
 
 - name: Unzip Vault
@@ -24,10 +24,11 @@
     mode: "0755"
 
 - name: Copy Vault configuration file
-  copy:
-    src: "{{ playbook_dir }}/../../vault_config/vault.hcl"
-    dest: "/etc/vault.hcl"
+  template:
+    src: "{{ playbook_dir }}/../vault_config/vault.hcl"
+    dest: "{{ vault_config_dir }}/vault.hcl"
     mode: "0644"
+  become: yes # Run this task as root
 
 - name: Create Vault service file
   copy:
@@ -36,7 +37,7 @@
       Description="HashiCorp Vault - A tool for managing secrets"
       Documentation=https://www.vaultproject.io/docs/
       [Service]
-      ExecStart=/usr/local/bin/vault server -config=/etc/vault.hcl
+      ExecStart=/usr/local/bin/vault server -config={{ vault_config_dir }}vault.hcl
       ExecReload=/bin/kill --signal HUP $MAINPID
       KillMode=process
       Restart=on-failure
