Fix typo, vault now starts successfully

--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -37,7 +37,7 @@
       Description="HashiCorp Vault - A tool for managing secrets"
       Documentation=https://www.vaultproject.io/docs/
       [Service]
-      ExecStart=/usr/local/bin/vault server -config={{ vault_config_dir }}vault.hcl
+      ExecStart=/usr/local/bin/vault server -config={{ vault_config_dir }}/vault.hcl
       ExecReload=/bin/kill --signal HUP $MAINPID
       KillMode=process
       Restart=on-failure
